kube/infrastructure/traefik/config/ingress-argocd.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: argocd
  namespace: argocd
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`argocd.k3s.s33g.uk`)
      kind: Rule
      services:
        - name: argocd-server
          port: 80
  tls:
    secretName: wildcard-k3s-s33g-uk-tls
