kube/infrastructure/traefik/config/ingress-longhorn.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: longhorn
  namespace: longhorn-system
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`longhorn.k3s.s33g.uk`)
      kind: Rule
      services:
        - name: longhorn-frontend
          port: 80
  tls:
    secretName: wildcard-k3s-s33g-uk-tls
