kube/infrastructure/traefik/config/ingress-monitoring.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: grafana
  namespace: monitoring
  annotations:
    external-dns.alpha.kubernetes.io/hostname: grafana.k3s.s33g.uk
    external-dns.alpha.kubernetes.io/target: 10.10.0.240
spec:
  entryPoints:
  - websecure
  routes:
  - match: Host(`grafana.k3s.s33g.uk`)
    kind: Rule
    services:
    - name: monitoring-grafana
      port: 80
  tls:
    secretName: wildcard-k3s-s33g-uk-tls
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: prometheus
  namespace: monitoring
  annotations:
    external-dns.alpha.kubernetes.io/hostname: prometheus.k3s.s33g.uk
    external-dns.alpha.kubernetes.io/target: 10.10.0.240
spec:
  entryPoints:
  - websecure
  routes:
  - match: Host(`prometheus.k3s.s33g.uk`)
    kind: Rule
    services:
    - name: monitoring-kube-prometheus-prometheus
      port: 9090
  tls:
    secretName: wildcard-k3s-s33g-uk-tls
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: alertmanager
  namespace: monitoring
  annotations:
    external-dns.alpha.kubernetes.io/hostname: alertmanager.k3s.s33g.uk
    external-dns.alpha.kubernetes.io/target: 10.10.0.240
spec:
  entryPoints:
  - websecure
  routes:
  - match: Host(`alertmanager.k3s.s33g.uk`)
    kind: Rule
    services:
    - name: monitoring-kube-prometheus-alertmanager
      port: 9093
  tls:
    secretName: wildcard-k3s-s33g-uk-tls
